--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,20 +1,48 @@
 page-home {
 
-}
-
-.grid-basic-page {
-
-  ion-col div {
-    background-color: #f0f5ff;
-    border: 1px solid #e6e9ee;
-    border-radius: 2px;
-    padding: 5px;
-    text-align: center;
+  div {
+    border: 1px solid #5d30ff; /* Синяя рамка */
   }
 
-  p {
-    padding: 10px 0 0 10px !important;
-    margin: 0;
+  div #content-header {
+    height: 20%;
   }
 
+  div #content {
+    height: 60%;
+  }
+
+  div #content-footer {
+    height: 20%;
+  }
+
+  /* ion-col div {
+     text-align: center;
+   }*/
+
+  div #content > div {
+    height: 33.5%;
+  }
+
+
+  .grid-row {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    height: 100%;
+  }
+
+  .grid-row div {
+    display: table-cell;
+    //background: red;
+    border: 1px solid black;
+  }
+
+  .cell-background1 {
+    background: #5d30ff;
+  }
+
+  .cell-background2 {
+    background: #f30d0d;
+  }
 }
