Добавил loader когда компьютер думает.. чтобы не тыкали преждевременно

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -58,11 +58,11 @@ page-home {
   }
 
   .cell-background1 {
-    background: #5d30ff;
+    background-color: #5d30ff;
   }
 
   .cell-background2 {
-    background: #f30d0d;
+    background-color: #f30d0d;
   }
 
   .scoreboard {
