--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -58,11 +58,11 @@ page-home {
   }
 
   .cell-background1 {
-    background-color: #5d30ff;
+    background-color: rgba(126, 123, 255, 0.7);
   }
 
   .cell-background2 {
-    background-color: #f30d0d;
+    background-color: rgba(243, 120, 131, 0.7);
   }
 
   .scoreboard {
